--- a/css/styles.css
+++ b/css/styles.css
@@ -18,11 +18,12 @@ body {
 h1{
     font-size: 50px;
 }
-h2{
+#hiLo{
     -webkit-text-stroke: 1px black;
     font-weight: bold;
     font-size: 40px;
 }
+
 #part2{
     margin: auto;
 }
